Fixed overflow issue in extension manager
Pushes onto next line

--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/resources/uicomponents/job/job.css
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/resources/uicomponents/job/job.css
@@ -95,4 +95,5 @@
   line-height: inherit;
   margin: 0;
   min-width: 100px;
+  overflow-wrap: break-word;
 }
